--- a/src/pages/Popup/index.css
+++ b/src/pages/Popup/index.css
@@ -1,6 +1,9 @@
 body {
   width: 300px;
   height: 260px;
+  display: flex;
+  flex-direction: column;
+  background-color: tomato;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
